starting user docs
