# src/api/v1/routes.js
@@ -28,6 +28,6 @@ routes.post('/tasks', TaskMiddleware.validateBeforeSave, TaskController.create);
 routes.get('/tasks/:id', TaskController.findById);
 routes.put('/tasks/:id', TaskMiddleware.validateBeforeSave, TaskController.update);
 routes.patch('/tasks/:id', TaskMiddleware.validateBeforeFinish, TaskController.finish);
-routes.delete('/tasks/:id', TaskController.delete);
+routes.delete('/tasks/:id/finish', TaskController.delete);
 
 module.exports = routes;
